--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -106,6 +106,7 @@ jobs:
         with:
           context: .
           push: false
+          load: true
           tags: teachme-cicd-api:test
           cache-from: type=gha
           cache-to: type=gha,mode=max
