--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,7 +54,7 @@ jobs:
     
     strategy:
       matrix:
-        python-version: ['3.9', '3.10', '3.11', '3.12']
+        python-version: ['3.11']
     
     steps:
       - name: Checkout код
@@ -80,7 +80,6 @@ jobs:
           pytest -v --cov=. --cov-report=xml --cov-report=term
       
       - name: Загрузка отчета о покрытии
-        if: matrix.python-version == '3.11'
         uses: codecov/codecov-action@v3
         with:
           file: ./coverage.xml
