Update health check and deployment endpoint URLs to use localhost

--- a/.github/workflows/deploy-ec2.yml
+++ b/.github/workflows/deploy-ec2.yml
@@ -169,7 +169,7 @@ jobs:
           sleep 3
           
           HEALTH_CHECK=$(curl -s -o /dev/null -w "%{http_code}" \
-            http://${{ secrets.EC2_HOST }}:8003/health || echo "000")
+            http://localhost:8003/health || echo "000")
           
           if [ "$HEALTH_CHECK" = "200" ]; then
             echo "✅ Health check успешен - приложение работает"
@@ -179,7 +179,7 @@ jobs:
           fi
           
           echo "🔍 Проверка deployment endpoint..."
-          DEPLOY_INFO=$(curl -s http://${{ secrets.EC2_HOST }}:8003/deployment || echo "{}")
+          DEPLOY_INFO=$(curl -s http://localhost:8003/deployment || echo "{}")
           echo "Deployment info: $DEPLOY_INFO"
 
   # Уведомление о результате
