--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Проверка импортов с isort
         run: |
           isort --check-only --diff .
-        continue-on-error: true
+#        continue-on-error: true
       
       - name: Линтинг с flake8
         run: |
