--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ fastapi==0.104.1
 uvicorn[standard]==0.24.0
 pydantic==2.5.0
 pydantic[email]==2.5.0
+aiofiles==23.2.1  # Для статических файлов
 
 # HTTP клиент для тестов
 httpx==0.25.1
